--- a/manifest.json
+++ b/manifest.json
@@ -10,17 +10,9 @@
   "page_action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/TF-16x16.png",
+      "32": "images/TF-32x32.png"
     }
-  },
-  "icons": {
-     "16": "images/get_started16.png",
-     "32": "images/get_started32.png",
-     "48": "images/get_started48.png",
-     "128": "images/get_started128.png"
   },
   "content_scripts": [
     {
@@ -29,6 +21,12 @@
       "js": ["contentScript.js"]
     }
   ],
+  "icons": {
+    "16": "images/TF-16x16.png",
+    "32": "images/TF-32x32.png",
+    "192": "images/TF-192x192.png",
+    "512": "images/TF-512x512.png"
+  },
   "options_page": "options.html",
   "manifest_version": 2
 }
